welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: Unit does not take parameters
baisseBrosse();avance()()
                       ^